@@ -1,9 +1,9 @@
 use strict;
 use warnings FATAL => 'all';
-use Test::More tests => 14;
+use Test::More tests => 15;
 use Data::Printer;
 use feature qw(say);
-# This is not necessary, but a simple teset, see Ovid's Book
+# This is not necessary, but a simple test, see Ovid's Book
 use Dependencies::Searcher;
 
 
@@ -60,6 +60,13 @@ my @clean_modules = $searcher->clean_everything(@real_modules);
 my @uniq_modules = $searcher->uniq(@clean_modules);
 
 $searcher->dissociate(@uniq_modules);
+
+# my $core_modules_number = $searcher->get_modules_number("core");
+# ok($core_modules_number == 4, "core numbers :()");
+# This is a shitty test, have to increment it each time we add modules...
+ok($searcher->count_non_core_modules eq 2, "non core numbers :()");
+
+#ok($modules_number == $searcher->core_modules);
 
 #foreach my $module ($searcher->non_core_modules) {
 #    if ($module =~ m/Moose/) {
